# payment-stripe

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
src/payment/: admin.py  models.py  urls.py  views.py
src/payment/migrations/: 0001_initial.py  0002_order.py  0003_discount_tax_item_discount_item_tax.py  0004_item_currency.py
src/payment/templates/: cancel.html  home.html  item.html  order.html
