[tool.poetry]
name = "my-test-task"
version = "0.1.0"
description = ""
authors = ["Vadim Bulai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-environ = "^0.11.2"
psycopg2 = "^2.9.7"
stripe = "^6.5.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
